--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+html {
+  overflow: hidden;
+}
+
+/*.App {*/
+/*  overflow: scroll;*/
+/*  height: 100vh;*/
+/*}*/
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
